Add action and tests bmr history
